--- a/nginx.conf
+++ b/nginx.conf
@@ -54,18 +54,10 @@ http {
             proxy_buffer_size           128k;
             proxy_buffers               4 256k;
             proxy_busy_buffers_size     256k;
+            log_not_found off;
         }
-    }    
-    
-    server {
-        listen 443 ssl;
-        server_name boiteatache;
-
-        ssl_certificate /etc/ssl/certs/dzflow.crt;
-        ssl_certificate_key /etc/ssl/private/dzflow.key;
-
         location /boite {
-            proxy_pass         http://service2;
+            proxy_pass         http://service2/login;
             proxy_redirect     off;
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
@@ -79,6 +71,13 @@ http {
             proxy_buffer_size           128k;
             proxy_buffers               4 256k;
             proxy_busy_buffers_size     256k;
+            log_not_found off;
         }
-    }
+        location = /favicon.ico {
+        return 204;
+        access_log     off;
+        log_not_found  off;
+        }
+    }    
+    
 }
